<resources>
    <string name="app_name">Guess The Audio</string>
    <string name="your_paytm_">Your paytm registered number</string>
    <string name="some_id">
98767534563
</string>
    <string name="we_will_sen">
We will send you OTP to verify your number.
</string>
    <string name="by_continui">
By, continuing, you agree to our terms and conditions and privacy policy.
</string>
    <string name="send_otp">

Send OTP
</string>
    <string name="create_acco">
Verify account
</string>
    <string name="enter_otp">

Enter OTP
</string>
    <string name="you_will_re">

You will receive an OTP on number 98767534563 in \n60 sec. If you don\u00E2\u0080\u0099t receive click resend again.
</string>
    <string name="annotation_">

ANNOTATION\nAPP
</string>
    <string name="correct_ear">

Correct and Earn
</string>
    <string name="total_text">500</string>
    <string name="previous_button">Previous</string>
    <string name="next_button">Next</string>
    <string name="expert_audio">Expert Audio</string>
    <string name="record_audio">Record Audio</string>
    <string name="title_activity_prononcer_navigation_drawer">PrononcerNavigationDrawerActivity
    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="full_name">Enter your Full Name</string>
    <string name="native_language">Native Language</string>
    <string name="age">Enter your age</string>
    <string name="gender">Gender :</string>
    <string name="save">Save</string>
    <string name="name_length">Please enter more that 6 characters!</string>
    <string name="min_max_age">Enter correct age!</string>
    <string name="select_gender">Please select a gender</string>
    <string name="native_language_error">Please enter your native language!</string>
    <string name="firebase_login_failed">Login Failed! Please try again!</string>

    <!--facebook login ids-->
    <string name="facebook_app_id">195834661064163</string>
    <string name="fb_login_protocol_scheme">fb195834661064163</string>
    <string name="enter_text_hint">Enter the audio text</string>
    <string name="send">Send</string>
    <string name="play">Play</string>
    <string name="edit_text_label">Correct the below text and send</string>
    <string name="pause">Pause</string>

</resources>
