<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".PronouncerNavigationDrawerActivity"
    tools:showIn="@layout/app_bar_prononcer_navigation_drawer">

    <view
        android:id="@+id/text_viewpager"
        class="english.android.com.guess_the_audio.utils.CustomViewPager"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_btn_previous"/>

    <ImageButton
        android:id="@+id/main_btn_previous"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:contentDescription="@string/previous_button"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="@+id/text_viewpager"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/left"/>

    <ImageButton
        android:id="@+id/main_btn_next"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@null"
        android:contentDescription="@string/next_button"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="@+id/text_viewpager"
        app:layout_constraintTop_toTopOf="@+id/main_divider_current_total"
        app:srcCompat="@drawable/right"/>

    <TextView
        android:id="@+id/main_tv_current_text_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="@+id/main_btn_previous"
        app:layout_constraintEnd_toStartOf="@+id/main_divider_current_total"/>

    <TextView
        android:id="@+id/main_tv_total_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="@+id/main_divider_current_total"
        app:layout_constraintStart_toEndOf="@+id/main_divider_current_total"/>

    <TextView
        android:id="@+id/main_divider_current_total"
        android:layout_width="13dp"
        android:layout_height="wrap_content"
        android:text="/"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="@+id/main_btn_previous"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/main_btn_previous"/>

    <com.chibde.visualizer.LineBarVisualizer
        android:id="@+id/audio_indicator"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_viewpager"/>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/player"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:backgroundTint="@color/colorPrimary"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/et_enter_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:srcCompat="@drawable/play"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/send"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        app:backgroundTint="@color/colorPrimary"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_send"/>

    <SeekBar
        android:id="@+id/audio_seek_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="@+id/audio_indicator"
        app:layout_constraintStart_toStartOf="@+id/audio_indicator"
        app:layout_constraintTop_toBottomOf="@+id/audio_indicator"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="225dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/audio_indicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/audio_indicator"/>

    <EditText
        android:id="@+id/et_enter_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/white_rounded_background"
        android:elevation="5dp"
        android:ems="10"
        android:hint="@string/enter_text_hint"
        android:inputType="textLongMessage"
        android:paddingBottom="8dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/send"
        app:layout_constraintEnd_toStartOf="@+id/send"
        app:layout_constraintStart_toStartOf="parent"/>


</android.support.constraint.ConstraintLayout>